--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="navbar__links link">Home</ul>
             <ul class="navbar__links link">Somos</ul>
             <ul class="navbar__links link">Tienda</ul>
-            <ul class="navbar__links link">Soporte</ul>   
+            <ul class="navbar__links link">Soportes</ul>   
         </div>
 
     </header>
